# machine_learning_global

./: .gitignore  README.md  build.sh  build_production.sh  install.sh
matrix/: .gitignore  README.md  matrix  shard.yml
matrix/save/: deep_mnist.json  linear_model_mnist.json  tmp.json
matrix/spec/: linear_classification_4_spec.cr  linear_classification_50_spec.cr  linear_classification_cross_ko_spec.cr  linear_classification_cross_spec.cr  linear_classification_ko_spec.cr  linear_classification_soft_ko_spec.cr  linear_classification_spec.cr  linear_classification_xor_ko_spec.cr  linear_classification_xor_spec.cr  linear_classifycation_spec.cr  linear_regression_4_spec.cr  linear_regression_50_spec.cr  linear_regression_ko_spec.cr  matrix_spec.cr  pmc_2_1_spec.cr  pmc_cross_spec.cr  pmc_multi_2_3_spec.cr  pmc_regression_4_spec.cr  pmc_xor_spec.cr
matrix/src/: matrix.cr
matrix/src/examples/linear_classification/: cross.cr
matrix/src/examples/linear_regression/: 3_exemples_ko.cr  50_exemples.cr
matrix/src/examples/mnist/: linear.cr  pmc.cr
matrix/src/examples/pmc/: 2_1.cr  cross.cr  multi_2_3_3_ko.cr  multi_2_x_x_3.cr  xor.cr
matrix/src/examples/rbf/: 50_exemples.cr  multi_2_3.cr  soft_ko.cr
matrix/src/exemples/linear_classification/: 3_exemples.cr  50_exemples.cr  cross.cr  cross_ko.cr  xor.cr  (+2 more)
matrix/src/mnist/: loader.cr
matrix/src/neuratron/: deep_model.cr  lib.cr  linear_model.cr  rbf_model.cr
neuratron/: CMakeLists.txt
neuratron/include/: neuratron.h  neuratron.hpp
neuratron/src/: deep_model.cpp  neuratron.c  neuratron.cpp  radial_model.cpp
(+7 files in other folders)
